--- a/docs/output.css
+++ b/docs/output.css
@@ -698,6 +698,14 @@ video {
   height: 100dvh;
 }
 
+.h-\[100px\] {
+  height: 100px;
+}
+
+.h-\[25px\] {
+  height: 25px;
+}
+
 .h-\[300px\] {
   height: 300px;
 }
@@ -712,26 +720,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[80px\] {
-  height: 80px;
-}
-
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[20px\] {
-  height: 20px;
-}
-
-.h-\[25px\] {
-  height: 25px;
 }
 
 .w-2\/4 {
@@ -758,6 +746,10 @@ video {
   width: 120px;
 }
 
+.w-\[20px\] {
+  width: 20px;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
@@ -777,10 +769,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[20px\] {
-  width: 20px;
 }
 
 .min-w-\[200px\] {
@@ -904,16 +892,16 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-\[6px\] {
+  border-radius: 6px;
+}
+
 .rounded-\[7px\] {
   border-radius: 7px;
 }
 
 .rounded-lg {
   border-radius: 0.5rem;
-}
-
-.rounded-\[6px\] {
-  border-radius: 6px;
 }
 
 .rounded-t-lg {
@@ -957,6 +945,11 @@ video {
   background-color: rgb(141 211 187 / var(--tw-bg-opacity));
 }
 
+.bg-\[red\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -976,23 +969,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
-.bg-\[white\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[red\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-hero {
-  background-image: url('../assets/image/Frame 36.svg');
+  background-image: url('./assets/image/Frame 36.svg');
 }
 
 .bg-cover {
